# iptv-cli-browser

./: .gitignore  README.md  pyproject.toml
src/iptv_browser/: __init__.py  cli.py  library.py  models.py  stream_tools.py  tui.py  xtream.py
tests/: test_library.py
