[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "iptv-browser"
version = "0.1.0"
description = "Browse Xtream IPTV metadata and emit ffmpeg commands."
requires-python = ">=3.13"
readme = "README.md"
authors = [{ name = "OpenAI Codex" }]
dependencies = []

[project.scripts]
iptv = "iptv_browser.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
